Added comprehensive unit and integration tests for error handling, model evaluation, and video utilities
- Implemented unit tests for error handling utilities including logging and exception handling.
- Added basic unit tests for error handling functions to ensure logger existence and functionality.
- Created unit tests for model evaluation, covering dataset directory checks and evaluation output structure.
- Developed integration tests for the model evaluation pipeline and demo video creation, ensuring end-to-end functionality.
- Added unit tests for model loading, inference, and validation functions, including confidence and IoU threshold checks.
- Implemented basic unit tests for video utilities, verifying video properties extraction.

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,10 @@ data_sets/image_data/*
 .DS_Store
 Thumbs.db
 
+# Logs
+logs/
+*.log
+
 # Inference evaluation outputs
 inference/results/
 inference/output_videos/
