--- a/requirements.txt
+++ b/requirements.txt
@@ -9,13 +9,15 @@ ultralytics
 # OpenCV for image/video processing
 opencv-python
 
-# PyO3 for Rust integration (If still needed, otherwise remove)
-pyo3
-
 # DINO-Seg dependencies
 transformers
 timm
 huggingface_hub
+
+# Testing dependencies
+pytest
+pytest-cov
+pytest-mock
 
 # MMDetection dependencies (REMOVED)
 # Note: Specific versions might be required depending on your PyTorch/CUDA setup.
