--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 env/
 venv/
 ENV/
+.venv/ # Add .venv to gitignore
 build/
 develop-eggs/
 dist/
@@ -19,6 +20,12 @@ parts/
 sdist/
 var/
 *.egg-info/
+
+# Pytest cache
+.pytest_cache/
+
+# Nox virtual environments
+.nox/
 
 # Rust
 /target/
